--- a/css/styles.css
+++ b/css/styles.css
@@ -239,11 +239,22 @@ HERO_SECTION
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office.jpg);
+    url(../images/bg-hero-mobile@1x.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
+/* -----------background img--------------------------------------- */
+@media screen and (min-resolution: 192dpi) {
+  .hero-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/bg-hero-mobile@2x.jpg);
+  }
+}
+
 .headline {
   font-weight: 700;
   font-size: 36px;
@@ -287,6 +298,22 @@ HERO_SECTION
   .hero-section {
     max-width: 1158px;
     padding: 112px 0;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/bg-hero-tablet@1x.jpg);
+  }
+
+  /* -----------background img--------------------------------------- */
+  @media screen and (min-resolution: 192dpi) {
+    .hero-section {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/bg-hero-tablet@2x.jpg);
+    }
   }
   .headline {
     font-size: 56px;
@@ -300,7 +327,24 @@ HERO_SECTION
   .hero-section {
     max-width: 1440px;
     padding: 188px 0;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/bg-hero-desktop@1x.jpg);
   }
+
+  /* -----------background img--------------------------------------- */
+  @media screen and (min-resolution: 192dpi) {
+    .hero-section {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/bg-hero-desktop@2x.jpg);
+    }
+  }
+
   .headline {
     margin-bottom: 48px;
   }
