--- a/css/styles-work.css
+++ b/css/styles-work.css
@@ -16,33 +16,7 @@
 
 /* ------ page ---------------------------------------- */
 
-.section {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
 /* ----- title & text & logo -------------------------- */
-.title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: var(--navy-blue);
-  text-transform: capitalize;
-}
-.under-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--navy-blue);
-}
-.text {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--slate);
-}
 
 /*  ******** PAGE-HEADER *************************************** */
 
@@ -60,65 +34,12 @@
 
 /* ========== TEAM SECTION ================================================= */
 
-.team-section {
-  background-color: var(--cloud);
-}
-
-.team-section-title {
-  margin-bottom: 72px;
-}
 .team-section-list {
   display: flex;
   gap: 24px;
 }
-.team-list-item {
-  background: var(--white);
-  text-align: center;
-  width: 264px;
-  height: 428px;
-  padding: 0px 0px 32px 0px;
 
-  border-radius: 0 0 4px 4px;
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  flex-basis: calc((100% - 3 * 24px) / 4);
-}
-.team-item-box {
-  padding: 32px 0;
-}
-.team-item-title {
-  margin-bottom: 8px;
-}
-.team-item-box .text {
-  margin-bottom: 8px;
-}
-/* -- == Team Social List - ==-- */
-
-.team-social-list {
-  display: flex;
-  gap: 24px;
-  justify-content: center;
-}
-.team-social-link {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: var(--iris);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  fill: #f4f4fd;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.team-social-link:hover,
-.team-social-link:focus {
-  background-color: var(--ocean);
-}
-.team-social-item {
-  width: 40px;
-  height: 40px;
-}
+/* --  Team Social List -- */
 
 /* ======= PORTFOLIO SECTION ======================================== */
 .portfolio-section-title {
@@ -204,7 +125,7 @@
 
   width: 264px;
 }
-/* -- == footer Social List == -- */
+/* --  footer Social List -- */
 .footer-social-box {
   margin-right: 80px;
 }
@@ -237,7 +158,7 @@
 .footer-social-link:focus {
   background-color: var(--green);
 }
-/* -- == subscribe-footer-box  == -- */
+/* --  subscribe-footer-box   -- */
 
 .footer-subscribe-form {
   display: flex;
