--- a/css/styles.css
+++ b/css/styles.css
@@ -116,8 +116,6 @@ body {
 @media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
   }
   .section {
     padding-top: 120px;
@@ -596,6 +594,7 @@ PORTFOLIO SECTION
   left: 0;
   overflow: auto;
   transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-list-item:hover .text-portfolio-overlay {
   transform: translateY(0);
@@ -646,28 +645,239 @@ PAGE FOOTER
   padding-top: 96px;
   padding-bottom: 96px;
 }
+@media screen and (max-width: 767px) {
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+  }
+}
 
-.footer-container {
-}
-.footer-desc-box {
-  margin-right: 120px;
-}
 .logo-footer {
-  display: inline-block;
-  margin-bottom: 16px;
+  display: block;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--iris);
+  padding: 16px 0;
 }
-
 .logo-part-footer {
   color: var(--cloud);
 }
 .text-footer {
   color: var(--cloud);
+  width: 288px;
+}
+/* --  footer Social List -- */
 
-  width: 264px;
+.footer-description {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--white);
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.footer-social-list {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+}
+
+.footer-social-link {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--iris);
+  fill: var(--cloud);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: var(--green);
+}
+/* --  subscribe-footer-box   -- */
+
+.footer-subscribe-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 24px;
+}
+
+.subscribe-email-input {
+  background-color: transparent;
+  min-width: 288px;
+  height: 40px;
+  padding: 8px 16px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: rgba(255, 255, 255, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+}
+
+.subscribe-email-btn {
+  display: flex;
+  background-color: var(--iris);
+  min-width: 165px;
+  height: 40px;
+  padding: 8px 24px;
+  justify-content: center;
+  align-items: center;
+
+  color: var(--white);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+
+  fill: white;
+  border: none;
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.subscribe-email-btn:hover,
+.subscribe-email-btn:focus {
+  background-color: var(--green);
+}
+.subscribe-email-btn-icon {
+  margin-left: 16px;
 }
 /* PAGE FOOTER_TABLET *********************************/
-/* PAGE FOOTER_DESKTOP ********************************/
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .footer-container {
+    display: flex;
+    gap: 72px 24px;
+    flex-wrap: wrap;
+    align-items: baseline;
+    max-width: 530px;
+  }
 
+  .text-footer {
+    width: 264px;
+  }
+  .logo-footer {
+    text-align: start;
+  }
+  .footer-description {
+    text-align: start;
+  }
+  .subscribe-email-input {
+    min-width: 264px;
+  }
+}
+/* PAGE FOOTER_DESKTOP ********************************/
+@media screen and (min-width: 1158px) {
+  .footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  .footer-container {
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+  }
+  .footer-description {
+    text-align: start;
+  }
+  .footer-desc-box {
+    margin-right: 120px;
+  }
+  .logo-footer {
+    text-align: start;
+  }
+  .footer-social-box {
+    margin-right: 80px;
+  }
+
+  .footer-social-list {
+    display: flex;
+    gap: 16px;
+  }
+
+  .footer-social-link {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--iris);
+    fill: var(--cloud);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .footer-social-link:hover,
+  .footer-social-link:focus {
+    background-color: var(--green);
+  }
+  /* --  subscribe-footer-box   -- */
+  .footer-subscribe-form {
+    flex-wrap: nowrap;
+  }
+  .subscribe-email-input {
+    background-color: transparent;
+    min-width: 264px;
+    height: 40px;
+    padding: 8px 16px;
+
+    color: #ffffff;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: var(--white);
+
+    border: 1px solid var(--white);
+    border-radius: 4px;
+
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  }
+
+  .subscribe-email-btn {
+    display: flex;
+
+    background-color: var(--iris);
+    min-width: 165px;
+    height: 40px;
+    padding: 8px 24px;
+    justify-content: center;
+    align-items: center;
+
+    color: var(--white);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+
+    fill: white;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .subscribe-email-btn:hover,
+  .subscribe-email-btn:focus {
+    background-color: var(--green);
+  }
+  .subscribe-email-btn-icon {
+    margin-left: 16px;
+  }
+}
 /* ========================================================================================================================================================
 MODAL-WINDOW
 ======================================================================================================================================================== */
