--- a/css/styles.css
+++ b/css/styles.css
@@ -261,6 +261,10 @@ HEADER
 }
 
 /* ========================================================================================================================================================
+MOB MENU
+======================================================================================================================================================== */
+
+/* ========================================================================================================================================================
 HERO_SECTION
 ======================================================================================================================================================== */
 /* COMMON & MOBILE *************************************/
@@ -803,12 +807,10 @@ PAGE FOOTER
   .footer-social-box {
     margin-right: 80px;
   }
-
   .footer-social-list {
     display: flex;
     gap: 16px;
   }
-
   .footer-social-link {
     width: 40px;
     height: 40px;
@@ -834,23 +836,18 @@ PAGE FOOTER
     min-width: 264px;
     height: 40px;
     padding: 8px 16px;
-
     color: #ffffff;
     font-weight: 400;
     font-size: 12px;
     line-height: 2;
     letter-spacing: 0.04em;
     color: var(--white);
-
     border: 1px solid var(--white);
     border-radius: 4px;
-
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   }
-
   .subscribe-email-btn {
     display: flex;
-
     background-color: var(--iris);
     min-width: 165px;
     height: 40px;
@@ -882,5 +879,463 @@ PAGE FOOTER
 MODAL-WINDOW
 ======================================================================================================================================================== */
 /* COMMON & MOBILE *************************************/
+@media screen and (max-width: 767px) {
+  .backdrop {
+    position: fixed;
+    background-color: var(--navy-blue-modal);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .backdrop.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--dairy);
+    width: 288px;
+    min-height: 623px;
+    border-radius: 4px;
+    padding: 72px 16px 24px 16px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-text {
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: var(--navy-blue);
+    max-width: 360px;
+    margin-bottom: 16px;
+  }
+  /*--  modal-close-btn  -- */
+  .modal-close-btn {
+    position: absolute;
+    display: flex;
+    background-color: var(--cornflower);
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    line-height: 0;
+
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    fill: var(--navy-blue);
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-close-btn:hover,
+  .modal-close-btn:focus {
+    background-color: var(--ocean);
+    fill: #ffffff;
+    border: none;
+  }
+
+  .modal-close-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  /* -- ====== Modal Form ====== -- */
+
+  .modal-form-fild-wrapper {
+    margin-bottom: 8px;
+  }
+  .modal-form-fild-label {
+    display: block;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--light-slate);
+    margin-bottom: 4px;
+  }
+  .modal-form-input-covering {
+    position: relative;
+  }
+  .modal-form-input {
+    background-color: transparent;
+    width: 100%;
+    height: 40px;
+    padding-left: 38px;
+    outline: transparent;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form-input:focus {
+    outline: transparent;
+    border-color: #4d5ae5;
+  }
+
+  /* -- -input-icon  -- */
+  .modal-form-input-icon {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    fill: var(--navy-blue);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form-input:focus + .modal-form-input-icon {
+    fill: #4d5ae5;
+  }
+  /* --  user-comment  -- */
+  .modal-comment-wrapper {
+    margin-bottom: 16px;
+  }
+
+  .modal-form-textarea {
+    background-color: transparent;
+    width: 100%;
+    height: 120px;
+    padding: 8px 16px 8px 16px;
+    color: rgba(46, 47, 66, 0.4);
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    border-radius: 4px;
+    border: 1px solid var(--navy-blue-modal);
+
+    resize: none;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form-textarea:focus {
+    border-color: #4d5ae5;
+    outline: transparent;
+  }
+
+  .modal-form-textarea::placeholder {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--navy-blue-modal);
+  }
+  /* --  privacy-checkbox   -- */
+  .modal-form-checkbox-wrapper {
+    margin-bottom: 24px;
+  }
+
+  .modal-form-checkbox-label {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--light-slate);
+  }
+  .privacy-p-link {
+    line-height: 1.33;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: var(--iris);
+    cursor: pointer;
+  }
+  .modal-form-checkbox-customize {
+    display: inline-flex;
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+    border-radius: 2px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    fill: transparent;
+    border: 1px solid var(--navy-blue-modal);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form-checkbox:checked
+    + .modal-form-checkbox-label
+    .modal-form-checkbox-customize {
+    background-color: #404bbf;
+    border: none;
+    fill: #f4f4fd;
+  }
+  .modal-form-checkbox:focus
+    + .modal-form-checkbox-label
+    .modal-form-checkbox-customize {
+    outline: 1px solid var(--iris);
+  }
+
+  /* --  Button Submit  -- */
+  .modal-form-submit {
+    display: block;
+    background-color: var(--iris);
+    min-width: 169px;
+    height: 56px;
+
+    color: var(--white);
+    text-align: center;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+
+    cursor: pointer;
+    align-items: center;
+    border-radius: 4px;
+    padding: 16px 32px;
+    margin-right: auto;
+    margin-left: auto;
+
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form-submit:hover,
+  .modal-form-submit:focus {
+    background-color: var(--ocean);
+  }
+}
 /* MODAL-WINDOW_TABLET ********************************/
+@media screen and (min-width: 768px) {
+  .backdrop {
+    position: fixed;
+    background-color: var(--navy-blue-modal);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .backdrop.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--dairy);
+    width: 408px;
+    min-height: 584px;
+    border-radius: 4px;
+    padding: 72px 24px 24px 24px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-text {
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: var(--navy-blue);
+    max-width: 360px;
+    margin-bottom: 16px;
+  }
+  /*--  modal-close-btn  -- */
+  .modal-close-btn {
+    position: absolute;
+    display: flex;
+    background-color: var(--cornflower);
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    line-height: 0;
+
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    fill: var(--navy-blue);
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-close-btn:hover,
+  .modal-close-btn:focus {
+    background-color: var(--ocean);
+    fill: #ffffff;
+    border: none;
+  }
+
+  .modal-close-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  /* -- ====== Modal Form ====== -- */
+
+  .modal-form-fild-wrapper {
+    margin-bottom: 8px;
+  }
+  .modal-form-fild-label {
+    display: block;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--light-slate);
+    margin-bottom: 4px;
+  }
+  .modal-form-input-covering {
+    position: relative;
+  }
+  .modal-form-input {
+    background-color: transparent;
+    width: 100%;
+    height: 40px;
+    padding-left: 38px;
+    outline: transparent;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form-input:focus {
+    outline: transparent;
+    border-color: #4d5ae5;
+  }
+
+  /* -- -input-icon  -- */
+  .modal-form-input-icon {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    fill: var(--navy-blue);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form-input:focus + .modal-form-input-icon {
+    fill: #4d5ae5;
+  }
+  /* --  user-comment  -- */
+  .modal-comment-wrapper {
+    margin-bottom: 16px;
+  }
+
+  .modal-form-textarea {
+    background-color: transparent;
+    width: 100%;
+    height: 120px;
+    padding: 8px 16px 8px 16px;
+    color: rgba(46, 47, 66, 0.4);
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    border-radius: 4px;
+    border: 1px solid var(--navy-blue-modal);
+
+    resize: none;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form-textarea:focus {
+    border-color: #4d5ae5;
+    outline: transparent;
+  }
+
+  .modal-form-textarea::placeholder {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--navy-blue-modal);
+  }
+  /* --  privacy-checkbox   -- */
+  .modal-form-checkbox-wrapper {
+    margin-bottom: 24px;
+  }
+
+  .modal-form-checkbox-label {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--light-slate);
+  }
+  .privacy-p-link {
+    line-height: 1.33;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: var(--iris);
+    cursor: pointer;
+  }
+  .modal-form-checkbox-customize {
+    display: inline-flex;
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+    border-radius: 2px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    fill: transparent;
+    border: 1px solid var(--navy-blue-modal);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form-checkbox:checked
+    + .modal-form-checkbox-label
+    .modal-form-checkbox-customize {
+    background-color: #404bbf;
+    border: none;
+    fill: #f4f4fd;
+  }
+  .modal-form-checkbox:focus
+    + .modal-form-checkbox-label
+    .modal-form-checkbox-customize {
+    outline: 1px solid var(--iris);
+  }
+
+  /* --  Button Submit  -- */
+  .modal-form-submit {
+    display: block;
+    background-color: var(--iris);
+    min-width: 169px;
+    height: 56px;
+
+    color: var(--white);
+    text-align: center;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+
+    cursor: pointer;
+    align-items: center;
+    border-radius: 4px;
+    padding: 16px 32px;
+    margin-right: auto;
+    margin-left: auto;
+
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form-submit:hover,
+  .modal-form-submit:focus {
+    background-color: var(--ocean);
+  }
+}
 /* MODAL-WINDOW_DESKTOP *******************************/
