--- a/css/styles.css
+++ b/css/styles.css
@@ -261,8 +261,112 @@ HEADER
 }
 
 /* ========================================================================================================================================================
-MOB MENU
+MOBILE MENU
 ======================================================================================================================================================== */
+@media screen and (max-width: 767px) {
+  .backdrop {
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .mob-menu {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 999;
+    background-color: #ffffff;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mob-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+  .mob-menu-container {
+    padding: 72px 16px 40px 16px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .mob-menu-close-btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    border-radius: 50%;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    line-height: 0;
+    fill: #2e2f42;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .mob-menu-close-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mob-menu-nav {
+    margin-bottom: auto;
+  }
+  .mob-menu-nav-list {
+    display: flex;
+    gap: 40px;
+    flex-direction: column;
+  }
+  .mob-menu-nav-link {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 111%;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .mob-menu-address {
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+    color: #434455;
+    font-size: 20px;
+  }
+
+  .mob-menu-address-list. {
+    display: flex;
+    gap: 24px;
+    flex-direction: column;
+  }
+  .mob-menu-nav-link {
+    letter-spacing: 0.02em;
+    color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mob-menu-contacts-box .team-social-list {
+    display: flex;
+    margin-top: 48px;
+    gap: 40px;
+  }
+  .mob-menu-contacts-box .team-social-item {
+    width: 40px;
+    height: 40px;
+  }
+  .current {
+    color: var(--ocean);
+  }
+}
 
 /* ========================================================================================================================================================
 HERO_SECTION
