--- a/css/styles.css
+++ b/css/styles.css
@@ -1141,6 +1141,8 @@ MODAL-WINDOW
   }
 
   .modal-form-checkbox-label {
+    display: flex;
+    align-items: center;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
@@ -1412,7 +1414,8 @@ MODAL-WINDOW
     .modal-form-checkbox-customize {
     outline: 1px solid var(--iris);
   }
-
+  .modal-form-checkbox-privacy-text {
+  }
   /* --  Button Submit  -- */
   .modal-form-submit {
     display: block;
