--- a/css/styles.css
+++ b/css/styles.css
@@ -331,7 +331,7 @@ MOBILE MENU
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 36px;
-    line-height: 111%;
+    line-height: 1.1;
     letter-spacing: 0.02em;
     color: #2e2f42;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -340,7 +340,7 @@ MOBILE MENU
   .mob-menu-address {
     font-style: normal;
     font-weight: 500;
-    line-height: 150%;
+    line-height: 1.5;
     color: #434455;
     font-size: 20px;
   }
@@ -350,11 +350,7 @@ MOBILE MENU
     gap: 24px;
     flex-direction: column;
   }
-  .mob-menu-nav-link {
-    letter-spacing: 0.02em;
-    color: #434455;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+
   .mob-menu-contacts-box .team-social-list {
     display: flex;
     margin-top: 48px;
