--- a/css/styles.css
+++ b/css/styles.css
@@ -363,6 +363,33 @@ MOBILE MENU
   .current {
     color: var(--ocean);
   }
+
+  /* mob-social-list */
+  .mob-social-list {
+    display: flex;
+    gap: 40px;
+    margin-top: 48px;
+  }
+  .mob-social-item {
+    width: 40px;
+    height: 40px;
+  }
+  .mob-social-link {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--iris);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    fill: #f4f4fd;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .mob-social-link:hover,
+  .mob-social-link:focus {
+    background-color: var(--ocean);
+  }
 }
 
 /* ========================================================================================================================================================
@@ -468,8 +495,8 @@ HERO_SECTION
 @media screen and (min-width: 1158px) {
   .hero-section {
     max-width: 1440px;
-    min-height: 600px;
-    padding: 188px 0;
+
+    padding: 180px 0;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
@@ -511,7 +538,6 @@ TEH STECK SECTION
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
-
   text-align: center;
   color: var(--navy-blue);
   margin-bottom: 8px;
@@ -528,15 +554,15 @@ TEH STECK SECTION
     flex-wrap: wrap;
 
     max-width: 736px;
-    gap: 24px;
     row-gap: 72px;
+    column-gap: 24px;
   }
   .teh-list-item {
-    flex-basis: calc((100% - 2 * 24px) / 2);
+    width: calc((100% - 24px) / 2);
   }
-}
-.teh-item-title {
-  text-align: start;
+  .teh-item-title {
+    text-align: start;
+  }
 }
 /* TEH STECK SECTION_DESKTOP **************************/
 @media screen and (min-width: 1158px) {
@@ -577,7 +603,7 @@ TEAM SECTION
   .team-section-list {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
     gap: 72px;
   }
 }
@@ -768,7 +794,7 @@ PAGE FOOTER
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--iris);
-  padding: 16px 0;
+  margin-bottom: 16px;
 }
 .logo-part-footer {
   color: var(--cloud);
@@ -816,7 +842,7 @@ PAGE FOOTER
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 24px;
+  gap: 16px;
 }
 
 .subscribe-email-input {
